improvement(package.json): change author
change author to real email

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "files": [
     "dist"
   ],
-  "author": "jianqing <jianqing@luojilab.com>",
+  "author": "jianqing <blessjq@gmail.com>",
   "repository": {
     "type": "git",
     "url": ""
